Add image ring green style

--- a/output.css
+++ b/output.css
@@ -632,6 +632,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.ring-green-400 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(74 222 128 / var(--tw-ring-opacity, 1));
+}
+
 .\*\:object-cover > * {
   -o-object-fit: cover;
      object-fit: cover;
