--- a/output.css
+++ b/output.css
@@ -710,6 +710,10 @@ video {
     display: flex;
   }
 
+  .sm\:flex-shrink-0 {
+    flex-shrink: 0;
+  }
+
   .sm\:items-center {
     align-items: center;
   }
@@ -746,5 +750,9 @@ video {
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:text-left {
+    text-align: left;
   }
 }
